# controllers/product.controllers.js
@@ -53,3 +53,22 @@ exports.updateProduct = async (req, res) => {
     res.status(500).json({success: false, message: "Server Error"});
   }
 };
+
+exports.deleteProduct = async (req, res) => {
+  // #swagger.tags=['Product']
+  const {id} = req.params;
+
+  if (!mongoose.Types.ObjectId.isValid(id)) {
+    return res
+      .status(404)
+      .json({success: false, message: "Invalid Product ID"});
+  }
+
+  try {
+    await Product.findByIdAndDelete(id);
+    res.status(200).json({success: true, message: "Product deleted"});
+  } catch (error) {
+    console.log("error in deleting product:", error.message);
+    res.status(500).json({success: false, message: "Server Error"});
+  }
+};
